# scMIC

./: .gitignore  .readthedocs.yaml  ALGORITHM.md  DATASETS.md  MANIFEST.in  README.md  pyproject.toml  requirements-analysis.txt  requirements.txt  setup.py  tests_smoke.py
.github/workflows/: docs.yml
data/example/: bone_metastasis_expression.csv  liver_metastasis_expression.csv  lung_metastasis_expression.csv  primary_expression.csv  primary_truth.csv
data/processed/: GSE173958_analysis_summary.json  GSE173958_lineage_validation_metrics.csv  GSE173958_m1_sctour_ot_mic_scores.csv  GSE173958_sctour_trajectory_metadata.csv  GSE173958_shap_gene_ranking.csv
docs/: Makefile  make.bat  requirements.txt
docs/source/: api_core.rst  api_interpret.rst  api_io.rst  api_validation.rst  conf.py  index.rst
docs/source/notebook/: 01_motmic_example.ipynb  02_GSE173958_lineage_validation.ipynb  04_GSE178318_human_crc_liver_metastasis.ipynb  05_GSE277783_spatial_validation.ipynb
motmic/: __init__.py  branch_embedding.py  core.py  interpret.py  io.py  organ_prior.py  ot.py  plotting.py  simulation.py  validation.py
notebooks/: 01_motmic_example_executed.ipynb  02_GSE173958_lineage_validation.ipynb  03_GSE249057_timecourse_discovery.ipynb  README.md
results/: lineage_like_validation_metrics.csv  notebook_motmic_scores.csv  shap_gene_ranking.csv
scripts/: download_geo.py  make_diagram.py  run_example.py  run_gse173958_sctour_validation.py
