[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "motmic"
version = "0.1.0"
description = "Multi-organ optimal transport for metastasis-initiating cell discovery"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["motmic*"]

